--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Convert README to HTML
       uses: actions/setup-node@v2
       with:
-        node-version: 'latest'
+        node-version: '16'
         
     - run: |
         npm install -g marked
